# labos

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260513_0001_initial_schema.py  20260514_0002_lab_storage.py  20260514_0003_export_quarantine.py  20260514_0004_event_metadata.py  20260514_0005_secret_leases.py  20260514_0006_run_timeouts.py  20260514_0007_destroy_retry_tracking.py
docs/: api.md  architecture.md  cli.md  lab-profiles.md  policies.md  release-checklist.md  repo-sources.md  threat-model.md
docs/plans/: 2026-05-13-labos-implementation-plan.md  2026-05-13-labos-roadmap.md
docs/specs/: 2026-05-13-labos-design.md
examples/profiles/: model-local.yaml  red-zone.yaml  research-persistent.yaml  safe-dev.yaml
labos/api/: app.py
labos/cli/: main.py
labos/config/: settings.py
labos/core/: entities.py  enums.py  events.py  models.py  policy_engine.py  policy_models.py  state_machine.py
labos/db/: __init__.py  schema.py  session.py
labos/runtimes/: base.py  docker_probe.py  docker_runtime.py
labos/security/: __init__.py  export_gate.py  secret_broker.py
labos/storage/: __init__.py  allocator.py  models.py  snapshots.py
labos/workers/: reconciler.py  scheduler.py
tests/: test_documentation_surface.py  test_imports.py
tests/api/: test_events.py  test_exports.py  test_health.py  test_labs.py  test_metadata_endpoints.py  test_profiles.py  test_runs.py  test_scheduler.py  (+2 more)
(+18 files in other folders)
